# hash-thesis

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  extract_commit_sha1.py  extract_first_words.py
config/: accuracy.yaml  timing.yaml
include/core/: a1.hpp  a1_mixed_materialized.hpp  a1_mixed_stream.hpp  a2.hpp  affinity.hpp  dataset.hpp  r1.hpp  r2.hpp  randomgen.hpp  timer.hpp  unaligned.hpp
include/hash/: ihash.hpp  ms.hpp  ms32.hpp  ms32_demo.hpp  msvec.hpp  poly.hpp  poly32.hpp  rapidhash.h  simpletab32.hpp  tornado32.hpp
include/sketch/: bottomk.hpp  countmin.hpp  isketch.hpp  oph.hpp
plots/: make_figs.py  plot.py  plot_all.py  plot_bottomk_all_strip.py  plot_bottomk_ms_strip.py  plot_exlude_ms_zoom.py  plot_speed_bars.py  plot_time_per_hash_no_title.py  plot_zoom.py
results/20251009_191553/: a2_speed.csv  a2_speed_bk.csv  a2_speed_cm.csv  a2_speed_oph.csv  r1_speed.csv  r1_speed_bk.csv  r1_speed_cm.csv  r1_speed_oph.csv  r2_speed.csv  r2_speed_bk.csv  r2_speed_cm.csv  r2_speed_oph.csv
scripts/: median_10_recent.ps1  run_all.ps1  run_speed_and_time.ps1
src/: a1_test.cpp  a2_test.cpp  acc_Bottom_ms_a1.cpp  acc_plot_1.cpp  accuracy_bottomk_all_a1.cpp  colisions_R2_MSVEC_rapid.cpp  main_accuracy.cpp  main_bench_timing.cpp  main_verify.cpp  paralel_BK_a1.cpp  paralel_BK_r1.cpp  paralel_BK_r2.cpp  paralel_CM_a1.cpp  paralel_CM_a2.cpp  paralel_CM_r1.cpp  paralel_CM_r2.cpp  paralel_OPH.cpp  paralel_OPH_a1.cpp  paralel_OPH_a2.cpp  paralel_OPH_r1.cpp  paralel_OPH_r2.cpp  paralel_accuracy_bottomk_all_a1.cpp  serial_BK_a1.cpp  serial_BK_a2.cpp  serial_BK_r1.cpp  serial_BK_r2.cpp  serial_CM_a1.cpp  serial_CM_a2.cpp  serial_CM_r1.cpp  serial_CM_r2.cpp  serial_OPH_a1.cpp  serial_OPH_a2.cpp  serial_OPH_r1.cpp  serial_OPH_r2.cpp  speed_BK_a2.cpp  speed_BK_r1.cpp  speed_BK_r2.cpp  speed_CM_a2.cpp  speed_CM_r1.cpp  speed_CM_r2.cpp  (+7 more)
